--- a/INTRO.Rmd
+++ b/INTRO.Rmd
@@ -16,19 +16,19 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Summary
 
-In this class we will explore how the concepts of population ecology can be applied to real-world systems to support and improve wildlife conservation and management. To take this course you should already have a basic grounding in the field of ecology (e.g., BIOL 314, NRES 217) and you should already have taken Dr. Stewart's class in wildlife ecology and management (NRES 310). This class is in some ways a bridge between NRES 310 and NRES 488 (Dynamics and Management of Wildlife Populations), which covers Program MARK in detail. This class is closely allied with NRES 421 (Conservation Biology), in that we learn and apply one of the most important tools used by conservation biologists and wildlife managers -- quantitative population and habitat models!    
+In this class we will explore how the concepts of population ecology can be applied to real-world systems to support and improve wildlife conservation and management. To take this course you should already have a basic grounding in the field of ecology (e.g., BIOL 314, NRES 217) and you should already have taken Dr. Stewart's class in wildlife ecology and management (NRES 310). NRES 470 is meant to be a bridge between NRES 310 and NRES 488 (Dynamics and Management of Wildlife Populations), which covers advanced tools like Program MARK in detail. This class is closely allied with NRES 421 (Conservation Biology), in that we learn and apply one of the most important tools used by conservation biologists and wildlife managers -- quantitative population and habitat models!    
 
 ## Syllabus:
-First let's take a walk through the online syllabus:
+First let's take a quick walk through the online syllabus:
 
 [Go to syllabus](index.html)
 [Go to schedule](schedule.html)
 
 ## Final projects
-It is never too early to start thinking about final project ideas and datasets. I will begin compiling a list of online databases that you could use for your projects (e.g., [GBIF](gbif.org)) that I will post to the course website.  
+It is never too early to start thinking about final project ideas and datasets. For the final projects, you will work in small groups to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). I will begin compiling a list of online databases that might be useful for your projects (e.g., [GBIF](gbif.org)) that I will post to the course website. In the meantime, start thinking about what species you might be interested in modeling, and what conservation and management strategies qyou might want to test.    
 
 ## Making up classes and labs
-Lectures and laboratory exercises will be posted online in enough detail to complete and study on your own time. That said, much of the benefit of this course will come from interactions with peers and the instructor during class and lab periods and I expect you to do your best to be a full participant in this class.  
+Lectures and laboratory exercises will be posted online in enough detail to complete and study on your own time. BUT, much of the benefit of this course will come from interactions with peers and the instructor during class and lab periods and I expect you to do your best to be a full participant in this class.  
 
 Speaking of which...
 
