--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -4,7 +4,7 @@ author: "NRES 746"
 date: "August 23, 2016"
 output: 
   html_document: 
-    theme: cerulean
+    theme: spacelab
     toc: no
     toc_float: no
 ---
