--- a/LECTURE2.Rmd
+++ b/LECTURE2.Rmd
@@ -54,29 +54,48 @@ The reason? Populations grow geometrically, a process called **exponential growt
   
 “Like most mathematicians, he takes the hopeful biologist to the edge of the pond, points out that a good swim will help his work, and then pushes him in and leaves him to drown.”   
   - Charles Elton, in reference to a work by Alfred Lotka   
+  
+![](1976_Elton.jpg)
 
 The importance of the method is this: if we know certain variables, mostly desired by ecologists and in some cases already determined by them, we can predict certain results which would not normally be predictable or even expected by ecologists. The stage of verification of these mathematical predictions has hardly begun; but their importance cannot be under-estimated, and we look forward to seeing the further volumes of Lotka’s studies.       
   - Charles Elton    
   
-  
 ## Population ecology is central to many of the most pressing questions in modern day ecology
 
--What are the evolutionary consequences of species becoming less connected through fragmentation or more connected through globalization?   
--What are the relative contributions of different levels of selection (gene, individual, group) to life-history evolution and the resulting population dynamics?   
--How do the strength and form of density dependence inﬂuence feedbacks between population dynamics and life-history evolution?    
--What are the evolutionary and ecological mechanisms that govern species’ range margins?       
--How can we upscale detailed processes at the level of individuals into patterns at the population scale?    
--How do species and population traits and landscape conﬁguration interact to determine realized dispersal distances?    
--Do different demographic rates vary predictably over different spatial scales, and how do they then combine to inﬂuence spatio-temporal population dynamics?    
--How does demographic and spatial structure modify the effects of environmental stochasticity on population dynamics?    
--How does environmental stochasticity and environmental change interact with density dependence to generate population dynamics and species distributions?    
--To what degree do trans-generational effects on life histories, such as maternal effects, impact on population dynamics?    
--What are the magnitudes and durations of carry-over effects of previous environmental experiences on an individual’s subsequent life history and consequent population dynamics?    
--What causes massive variability in recruitment in some marine systems?    
--How does covariance among life-history traits affect their contributions to population dynamics?    
--What is the relative importance of direct (consumption, competition) vs. indirect (induced behavioural change) interactions in determining the effect of one species on others?    
--How important is individual variation to population, community and ecosystem dynamics?    
--What demographic traits determine the resilience of natural populations to disturbance and perturbation?    
+These questions are from [Sutherland et al. 2012](http://onlinelibrary.wiley.com/doi/10.1111/1365-2745.12025/full). This paper is on WebCampus (optional). Of course there are many more interesting questions- limited only by your imagination. 
+
+You may not understand all these questions now- we will revisit this list at the end of the semester!
+
+![](Fragmentation1.jpg)
+
+-What are the evolutionary consequences of species becoming less connected through **fragmentation** or more connected through globalization?  
+
+![](Juniperus_range_map.gif)
+
+-What are the evolutionary and ecological mechanisms that govern species’ **range margins**?  
+
+-How does **environmental stochasticity** and environmental change interact with density-dependence to generate population dynamics and species distributions?
+
+-How can we upscale detailed processes at the level of individuals into patterns at the population scale?
+
+-How important is **individual variation** to population, community and ecosystem dynamics?
+
+-How do species and population traits and landscape conﬁguration interact to determine realized **dispersal distances**?  
+
+-To what degree do trans-generational effects on life histories, such as **maternal effects**, impact on population dynamics?
+
+-How does covariance among life-history traits affect their contributions to population dynamics?   
+
+![](Wolves_and_bones.jpg)
+
+-What is the relative importance of direct (**predation, competition**) vs. indirect (induced behavioural change) interactions in determining the effect of one species on others?    
+
+![](Gopherus_agassizii.jpg)
+
+-What demographic traits determine the resilience of natural populations to disturbance and perturbation?  
+
+#### And many more!  
+
 -In what ecological settings are parasites key regulators of population dynamics?    
 -How does species loss affect the extinction risk of the remaining species?    
 -How important are dynamical extinction-recolonization equilibria to the persistence of species assemblages in fragmented landscapes?    
@@ -96,7 +115,6 @@ The importance of the method is this: if we know certain variables, mostly desir
 ![](positivefeedback1.gif)
 
 ## In-class Exercise: Feedbacks
-
 
 Feedbacks occur when the inflows and outflows (e.g., births and deaths) depend upon the value of the stock (e.g., a wildlife population!). 
 
