--- a/INTRO.Rmd
+++ b/INTRO.Rmd
@@ -24,30 +24,36 @@ First let's take a quick walk through the online syllabus:
 [Go to syllabus](index.html)
 [Go to schedule](schedule.html)
 
-## Final projects
-It is never too early to start thinking about final project ideas and datasets. For the final projects, you will work in small groups to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). I will begin compiling a list of online databases that might be useful for your projects (e.g., [GBIF](gbif.org)) that I will post to the course website. In the meantime, start thinking about what species you might be interested in modeling, and what conservation and management strategies qyou might want to test.    
+## Software
+Skills with specialized software and computer programming is critical in modern-day conservation biology and wildlife management. In this class, you will gain familiarity with using some specialized tools (e.g., [Program MARK](http://www.phidot.org/software/mark/)) and some computer programming (e.g., [InsightMaker](https://insightmaker.com/), [R](https://cran.r-project.org/)) and I hope by the end of this class you will understand how powerful and useful these tools can be -- and not just for population ecology!
 
-## Making up classes and labs
-Lectures and laboratory exercises will be posted online in enough detail to complete and study on your own time. BUT, much of the benefit of this course will come from interactions with peers and the instructor during class and lab periods and I expect you to do your best to be a full participant in this class.  
-
-Speaking of which...
+See the [links page](/Links.html) for some useful references.
 
 ## Introductions
-Let's take some time go around the room and introduce each other and what we are hoping to get out of this course. 
+Let's take some time go around the room and introduce each other and what we are hoping to get out of this course.
 
 Please take the time to introduce yourself in more detail on the "WebCampus" site -- I posted a question on the discussion board.  
 
-Remember, I need your frequent and honest feedback in order to make sure that the level is appropriate and the topics are useful!
+*I need your frequent and honest feedback in order to make sure that the level and pace are appropriate!*
 
 ## Textbook
-Please order the course textbook (A Primer of Ecology, by Nick Gotelli) as soon as possible. You can purchase the textbook on [Amazon](https://www.amazon.com/Primer-Ecology-Fourth-Nicholas-Gotelli/dp/0878933182/ref=sr_1_1?s=books&ie=UTF8&qid=1484867155&sr=1-1&keywords=a+primer+of+ecology). All other readings will be posted on WebCampus.  
+Please order the course textbook (A Primer of Ecology, by Nick Gotelli) as soon as possible. You can purchase the textbook new or used on [Amazon](https://www.amazon.com/Primer-Ecology-Fourth-Nicholas-Gotelli/dp/0878933182/ref=sr_1_1?s=books&ie=UTF8&qid=1484867155&sr=1-1&keywords=a+primer+of+ecology). All other readings will be posted on [WebCampus](https://unr.instructure.com/).
 
-## Software
-Skills with specialized software and even computer programming is valuable in modern-day conservation biology and wildlife management. In this class, you will gain familiarity with using some specialized tools (e.g., Program MARK) and some computer programming (e.g., InsightMaker, R) and I hope by the end of this class you will understand how powerful and useful these tools can be!
+## Out-of-class work
+Much of class time and lab time will be spent on hands-on, in-class exercises. To really make the most of this course, you will need to devote significant time outside of class on:    
 
-See the [links page](https://kevintshoemaker.github.io/NRES-470/) for some useful references.
+1. Studying the assigned readings (see [the schedule](/schedule.html)) and online lecture materials
+2. Finishing any problems/exercises you didn't complete during class or lab
+3. Working on your final group projects.  
 
+## Final projects
+It is never too early to start thinking about final project ideas and datasets. For the final projects, you will work in small groups to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). I will begin compiling a list of online databases that might be useful for your projects (e.g., [GBIF](gbif.org)) that I will post to the course website. In the meantime, start thinking about what species you might be interested in modeling, and what conservation and management strategies you might want to test.    
 
+## Quizzes
+Some class periods will begin with a short, unannounced quiz. The questions will not be difficult, and are just intended to (1) make sure you are keeping up with the readings and (2) give me some feedback about your progress. 
+
+## Making up classes and labs
+Lectures and laboratory exercises will be posted online in enough detail to complete and study on your own time. BUT, much of the benefit of this course will come from interactions with peers and the instructor during class and lab periods and I expect you to be a full participant in this class.  
 
 
 
