--- a/LECTURE1.Rmd
+++ b/LECTURE1.Rmd
@@ -22,41 +22,39 @@ We can think of humans as just another element in these complex systems. And wil
 
 This is not a systems ecology class! 
 
-BUT, systems ecology provides a great framework for thinking about natural populations and how to manage them. 
+BUT, systems ecology provides a great framework for thinking about natural populations, understanding how linkages (abiotic and biotic environments) might affect them, and how to manage natural populations most effectively. 
 
 ## Emergent properties
-This is one of the most powerful ideas in whole-systems thinking -- when you put many interacting parts together, systems often behave in new and unexpected ways! 
+This is one of the most powerful ideas in whole-systems thinking -- when you put many interacting, linked parts together, systems often behave in interesting and unexpected ways! 
 
 Take a classic predator-prey system...
 
 [Insightmaker Lynx-Hare example](https://insightmaker.com/insight/68437/)  
 
-This is a classic example in population ecology, which we will revisit- but for now it serves as an example of an interacting system that exhibits an emergent property -- regular oscillations!  
+This is a classic example in population ecology, which we will revisit in great detail in this course - but for now it serves as an example of an interacting system that exhibits an emergent property -- regular oscillations!  
 
-And here's a more abstract example that illustrates some cool emergent properties.
+And here's a more abstract example that illustrates some really cool and complex emergent properties.
 
 [Lorenz attractor](https://insightmaker.com/insight/1829/Lorenz-Attractor)
 
-## InsightMaker: a modeling framework for systems thinking!
+## *InsightMaker*: a modeling framework for systems thinking!
 
-[InsightMaker](insightmaker.com) is a flexible web-based software for defining interacting systems and for modeling the behavior of these systems. 
+[InsightMaker](insightmaker.com) is a flexible web-based software for defining interacting systems and for modeling the behavior of inter-connected systems. 
 
-Both of the above examples were made in InsightMaker.
+Both of the above examples were constructed in InsightMaker.
 
-We will make extensive use of InsightMaker, both in class and in lab- this will give you a chance to play around with complex systems without needing a background in computer programming!
+We will make extensive use of InsightMaker, both during class and in lab- this will give you a chance to play around with complex systems without needing a background in computer programming!
 
 ## Computer programming and systems thinking
 
-Modern computers have reduced or eliminated many of the barriers to understanding how complex systems behave, and as a result computational algorithms are a critical component to modern whole-systems analysis, including **ecosystems** analyses. Armed with basic facility with computer programming, ecologists and natural resource professionals can formalize their understanding of the natural systems in which they work, accounting for complex biological realities that may have been ignored if these tools were not available.  **In this course, we will learn to harness the power of computer programming for understanding and managing natural populations**.  
+Modern computers have reduced or eliminated many of the barriers to understanding how complex systems behave, and as a result **specialized software and computer programming** are a critical component to modern whole-systems analysis, including **ecosystems** analyses. Armed with basic facility with computer programming, ecologists and natural resource professionals can formalize their understanding of the natural systems in which they work, accounting for complex biological realities that may have been ignored if these tools were not available.  **In this course, we will learn to harness the power of computer simulations for understanding and managing natural populations**.  
 
-By the end of this course, students will have the ability to program their own whole-systems models in InsightMaker, and use specialized software for parameterizing these models (e.g., Program MARK, various **R** packages)
+By the end of this course, students will have the ability to program their own *whole-systems models* in InsightMaker, and use specialized software for parameterizing these models (e.g., Program MARK, various **R** packages)
 
 **The course motto**: *Get messy*! This might sound funny for a computer-based class. But just as ecological systems are complex and messy, models sometimes get messy. 
 Don't be afraid to model messy systems. And above all, don't be afraid to be wrong- that attitude is the enemy of successful computer programming, and therefore the enemy of good wildlife management! When we build our own algorithms, we can be entering uncharted territory. And this can be difficult and dangerous, but ultimately rewarding! 
 
-Of course, getting messy means not just reading and listening to lectures, it means *learning by doing*! Instructor-led lectures will be kept short, and we will spend significant class time and lab time on our computers, working through problems.
-
-
+Of course, getting messy means not just reading and listening to lectures, it means *learning by doing*! Instructor-led lectures will be kept short, and we will spend significant class time (and pretty much all of lab time) on our computers, working through problems.
 
 ## In-class Exercise: InsightMaker
 
