--- a/index.Rmd
+++ b/index.Rmd
@@ -46,12 +46,12 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 - NRES 310 (Wildlife Ecology and Management)  
 
 ### Class description  
-This class will explore how concepts of population ecology (e.g., covered in BIOL 314) can be used to inform the conservation and management of natural populations and ecosystems. We will emphasize practical approaches to problem-solving in ecology, conservation, and wildlife management via creative application of population ecology theory using simulation models and statistics. Topics will include population viability analysis (PVA), site-occupancy models, habitat suitability models, metapopulation models, species co-occurrence models, projecting biodiversity response to climate change and more. Laboratory exercises will provide students with hands-on experience with ecological models and their practical applications.
+This class will explore how concepts of population ecology (e.g., covered in BIOL 314) can be used to inform the conservation and management of natural populations and ecosystems. We will emphasize practical approaches to problem-solving in ecology, conservation, and wildlife management via creative application of population ecology theory using simulation models and statistics. Topics will include population viability analysis (PVA), site-occupancy models, habitat suitability models, metapopulation models, species co-occurrence models, projecting population response to climate change and more. Laboratory exercises will provide students with hands-on experience with ecological models and their practical applications in the conservation and management of wild populations.
 
 ### Learning outcomes
 1.	Identify the major classes of models used by ecologists (e.g., statistical vs mechanistic, quantitative vs heuristic, stochastic vs deterministic) and explain how and why ecologists use these models.   
-2.	Apply tools such as population viability analysis (PVA), site-occupancy models, and metapopulation models to address the conservation and management of natural populations.  
-3.	Perform basic statistics, data visualization, simulation modeling and model validation with Excel and the statistical computing language “R”.  
+2.	Apply tools such as population viability analysis (PVA), site-occupancy models, and metapopulation models to address the conservation and management of natural populations.   
+3.	Perform basic statistics, data visualization, simulation modeling and model validation with Excel, the statistical computing language “R”, and the web-based software, InsightMaker.  
 4.	Critically evaluate the strength of inferences drawn from ecological simulation models using tools such as cross-validation and sensitivity analysis.  
 5.	Explain how species interactions can influence predictions of species range shifts and the biodiversity response to global change, and formulate strategies for accounting for species interactions in ecological models.    
 6.	Communicate original research in applied population and community ecology via a professional oral presentation.   
@@ -59,21 +59,21 @@ This class will explore how concepts of population ecology (e.g., covered in BIO
 ### Grading: 
 The course grade will be based on the following components:
 
-Lab exercises (8 total)	         25% (80 pts)    
-Final group project              25% (80 pts)    
-Midterm exam # 1 (date TBD)	     12.5% (40 pts)    
-Midterm exam # 2 (date TBD)   	 12.5% (40 pts)    
-Final exam (date TBD)   	       25% (80 pts)    
-(Total	320 points)    
+Lab exercises (8 total)	         20%  (80 points)     
+Quizzes and participation        10%  (40 points)     
+Group project                    25%  (100 points)      
+Midterm exam # 1 (date TBD)	     10%  (40 points)    
+Midterm exam # 2 (date TBD)   	 10%  (40 points)    
+Final exam (16 May, 230pm)   	   25%  (100 points)    
 
-NOTE: Graduate students enrolled in 670 will have an additional 50 pts used to calculate their grade (see below) of a total of 370 points. 
+NOTE: Graduate students enrolled in NRES 670 will have an additional 50 pts used to calculate their grade (see below) of a total of 370 points. 
 Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82 to 80), C+ (79 to 77), C (76 to 73), C- (72 to 70), D+ (69 to 67), D (66 to 63), D- (62 to 60), F (below 60). 
 
 ### Exams:
 There will be two midterm exams and a comprehensive final exam. These will consist of multiple-choice, short-answer questions, and essay questions requiring synthesis of ideas and critical thinking. The midterm exam will be cumulative, and based on all information presented up through the week prior to the exam.
 
 ### Lectures
-Lecture grades will be based primarily on participation and occasional short quizzes. Participation is essential to the learning process, and to our mutual enjoyment of this class. Learning is not a passive process; students are expected to engage with the material in class rather than simply listen and take notes. You should be prepared in class to ask questions, to answer questions posed by other students, and to engage in occasional group problem-solving activities (in class). 
+Lecture grades will be based primarily on participation and occasional short quizzes. Participation is essential to the learning process (and to our mutual enjoyment of this class). Learning is not a passive process; students are expected to engage with the material in class rather than simply listen and take notes. You should be prepared in class to ask questions, to answer questions posed by other students, and to engage in frequent problem-solving activities (in class). 
 
 ### Labs  
 Lab exercises will focus on applying concepts and methods introduced in lectures, and will involve real data and problems in wildlife conservation and management wherever possible. Graded lab assignments will involve figures, tables, InsightMaker models and R code (when applicable) and responses to questions in short-answer format. Laboratory write-ups will be due the following lab period, unless otherwise specified. 
