--- a/LECTURE1.Rmd
+++ b/LECTURE1.Rmd
@@ -43,7 +43,7 @@ And here's a more abstract example that illustrates some really cool and complex
 
 Both of the above examples were constructed in InsightMaker.
 
-We will make extensive use of InsightMaker, both during class and in lab- this will give you a chance to play around with complex systems without needing a background in computer programming!
+We will make extensive use of InsightMaker, both during class and in lab- this will give you a chance to play around with complex and dynamic systems without needing a background in computer programming!
 
 ## Computer programming and systems thinking
 
