--- a/INTRO.Rmd
+++ b/INTRO.Rmd
@@ -27,7 +27,7 @@ First let's take a quick walk through the online syllabus:
 ## Software
 Skills with specialized software and computer programming is critical in modern-day conservation biology and wildlife management. In this class, you will gain familiarity with using some specialized tools (e.g., [Program MARK](http://www.phidot.org/software/mark/)) and some computer programming (e.g., [InsightMaker](https://insightmaker.com/), [R](https://cran.r-project.org/)) and I hope by the end of this class you will understand how powerful and useful these tools can be -- and not just for population ecology!
 
-See the [links page](/Links.html) for some useful references.
+See the [links page](Links.html) for some useful references.
 
 ## Introductions
 Let's take some time go around the room and introduce each other and what we are hoping to get out of this course.
@@ -42,7 +42,7 @@ Please order the course textbook (A Primer of Ecology, by Nick Gotelli) as soon 
 ## Out-of-class work
 Much of class time and lab time will be spent on hands-on, in-class exercises. To really make the most of this course, you will need to devote significant time outside of class on:    
 
-1. Studying the assigned readings (see [the schedule](/schedule.html)) and online lecture materials
+1. Studying the assigned readings (see [the schedule](schedule.html)) and online lecture materials
 2. Finishing any problems/exercises you didn't complete during class or lab
 3. Working on your final group projects.  
 
@@ -56,7 +56,7 @@ Some class periods will begin with a short, unannounced quiz. The questions will
 Lectures and laboratory exercises will be posted online in enough detail to complete and study on your own time. BUT, much of the benefit of this course will come from interactions with peers and the instructor during class and lab periods and I expect you to be a full participant in this class.  
 
 
-
+[--go to next lecture--](LECTURE1.html)
 
 
 
