--- a/LECTURE1.Rmd
+++ b/LECTURE1.Rmd
@@ -86,7 +86,7 @@ Finally, just for fun, here is a cool video of the Lorenz Attractor, which we sa
 [Lorenz attractor video!](https://www.youtube.com/watch?v=iu4RdmBVdps)
 
 
-
+[--go to next lecture--](LECTURE2.html)
 
 
  
