--- a/LECTURE2.Rmd
+++ b/LECTURE2.Rmd
@@ -156,7 +156,7 @@ Starting with [Stock] = 1 and [Flow] = [Stock] the value of [Stock] grows slowly
 And just for fun, here is a [video](https://www.youtube.com/watch?v=DZCm2QQZVYk) about exponential growth you might want to check out..
 
 
-
+[--go to next lecture--](LECTURE3.html)
 
 
 
